force-app/main/default/objects/Case/fields/data_privacy__c.field-meta.xml
<CustomField>
    <fullName>data_privacy__c</fullName>
    <label>data privacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>checkit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>