force-app/main/default/objects/Case/fields/is_Opportunity_Active__c.field-meta.xml
<CustomField>
    <fullName>is_Opportunity_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Opportunity Active</label>
    <type>Checkbox</type>
</CustomField>