force-app/main/default/objects/Case/fields/Number_Of_Open_Oppoturnities__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Open_Oppoturnities__c</fullName>
    <label>Number Of Open Oppoturnities</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>